added test cases for reddit corpus